Archive2/55/11bb14bf6723ea/output
main.cpp:4:8: error: template instantiation depth exceeds maximum of 900 (use -ftemplate-depth= to increase the maximum) instantiating 'struct A<901>'
   enum { val = A<I+1>::val };
        ^
main.cpp:4:8:   recursively required from 'struct A<2>'
main.cpp:4:8:   required from 'struct A<1>'
main.cpp:7:13:   required from here

main.cpp:4:8: error: incomplete type 'A<901>' used in nested name specifier
